# storage/api-docs/api-docs.json
@@ -135,6 +135,185 @@
                     }
                 }
             }
+        },
+        "/api/blogs": {
+            "get": {
+                "tags": [
+                    "Blogs"
+                ],
+                "summary": "Get all blogs",
+                "description": "Returns a list of all blogs.",
+                "operationId": "393feb67e712ffe8052c83b54689ceb0",
+                "parameters": [
+                    {
+                        "name": "Accept",
+                        "in": "header",
+                        "description": "Accept header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "application/json"
+                        }
+                    },
+                    {
+                        "name": "Authentication",
+                        "in": "header",
+                        "description": "Bearer token",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "Bearer <token>"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A list of all blogs"
+                    },
+                    "401": {
+                        "description": "Unauthorized. Indicates that the user is not authenticated."
+                    },
+                    "500": {
+                        "description": "Internal server error. Indicates a server-side problem."
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Blogs"
+                ],
+                "summary": "Create a new blog",
+                "description": "Creates a new blog with the provided title, image, and body.",
+                "operationId": "e3dc4217ddba995e32209a6b5fa5a946",
+                "parameters": [
+                    {
+                        "name": "Accept",
+                        "in": "header",
+                        "description": "Accept header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "application/json"
+                        }
+                    },
+                    {
+                        "name": "Authentication",
+                        "in": "header",
+                        "description": "Bearer token",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "Bearer <token>"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Blog information",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "image",
+                                    "body"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "description": "The title of the blog",
+                                        "type": "string",
+                                        "example": "My first blog"
+                                    },
+                                    "image": {
+                                        "description": "The image of the blog",
+                                        "type": "string",
+                                        "format": "url",
+                                        "example": "https://example.com/image.jpg"
+                                    },
+                                    "body": {
+                                        "description": "The body of the blog",
+                                        "type": "string",
+                                        "example": "This is the body of my first blog"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Blog created successfully"
+                    },
+                    "400": {
+                        "description": "Bad request. Indicates that the request body is invalid or incomplete."
+                    },
+                    "401": {
+                        "description": "Unauthorized. Indicates that the user is not authenticated."
+                    },
+                    "422": {
+                        "description": "Unprocessable entity. Indicates that the request body is invalid or incomplete."
+                    },
+                    "500": {
+                        "description": "Internal server error. Indicates a server-side problem."
+                    }
+                }
+            }
+        },
+        "/api/blogs/{id}": {
+            "get": {
+                "tags": [
+                    "Blogs"
+                ],
+                "summary": "Get a blog by ID",
+                "description": "Returns a blog with the provided ID.",
+                "operationId": "a721b624ed6c79419c05d78a108b4d95",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The ID of the blog",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "Accept",
+                        "in": "header",
+                        "description": "Accept header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "application/json"
+                        }
+                    },
+                    {
+                        "name": "Authentication",
+                        "in": "header",
+                        "description": "Bearer token",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "Bearer <token>"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A blog with the provided ID"
+                    },
+                    "404": {
+                        "description": "Not found. Indicates that the blog with the provided ID was not found."
+                    },
+                    "401": {
+                        "description": "Unauthorized. Indicates that the user is not authenticated."
+                    },
+                    "500": {
+                        "description": "Internal server error. Indicates a server-side problem."
+                    }
+                }
+            }
         }
     }
 }
